Align path recommendation API data structures between FE and BE